--- a/Qemu-Kvm-Terraform/generic-fedora-41.cfg
+++ b/Qemu-Kvm-Terraform/generic-fedora-41.cfg
@@ -1,4 +1,20 @@
 #cloud-config
+
+# Write proxy configuration for DNF
+write_files:
+  - path: /etc/dnf/dnf.conf
+    content: |
+      [main]
+      gpgcheck=True
+      installonly_limit=3
+      clean_requirements_on_remove=True
+      best=False
+      skip_if_unavailable=True
+      fastestmirror=true
+      max_parallel_downloads=20
+      deltarpm=1
+      proxy="socks5h://192.168.88.8:10808"
+
 hostname: ${hostname}
 users:
   - name: ${username}
@@ -15,6 +31,7 @@ package_update: true
 package_upgrade: true
 packages:
   - qemu-guest-agent
+  - python3-libdnf5
 
 ssh_pwauth: true
 
@@ -24,3 +41,4 @@ runcmd:
   # Configure SSH
   - sed -i 's/PasswordAuthentication no/PasswordAuthentication yes/g' /etc/ssh/sshd_config
   - systemctl restart sshd
+  - systemctl restart systemd-binfmt.service
