--- a/Qemu-Kvm-Terraform/generic-fedora-40.cfg
+++ b/Qemu-Kvm-Terraform/generic-fedora-40.cfg
@@ -13,7 +13,7 @@ write_files:
       fastestmirror=true
       max_parallel_downloads=20
       deltarpm=1
-      proxy="socks5h://192.168.88.8:10808"
+      proxy="socks5h://192.168.8.102:10808"
 
 hostname: ${hostname}
 users:
@@ -38,6 +38,8 @@ ssh_pwauth: true
 runcmd:
   - systemctl start qemu-guest-agent
   - systemctl enable qemu-guest-agent
+  - systemctl start cloud-final.service
+  - systemctl enable cloud-final.service
   # Configure SSH
   - sed -i 's/PasswordAuthentication no/PasswordAuthentication yes/g' /etc/ssh/sshd_config
   - systemctl restart sshd
