--- a/Qemu-Kvm-Terraform/generic-debian-bookworm.cfg
+++ b/Qemu-Kvm-Terraform/generic-debian-bookworm.cfg
@@ -21,4 +21,4 @@ ssh_pwauth: true
 runcmd:
   - systemctl start qemu-guest-agent
   - systemctl enable qemu-guest-agent
-  - echo 'Acquire::http::proxy "socks5h:192.168.88.8:10808";' > /etc/apt/apt.conf.d/proxy
+  - echo 'Acquire::http::proxy "socks5h://192.168.8.102:10808";' > /etc/apt/apt.conf.d/proxy
