Add: pre-committer

--- a/Qemu-Kvm-Terraform/generic-fedora-40.cfg
+++ b/Qemu-Kvm-Terraform/generic-fedora-40.cfg
@@ -18,11 +18,11 @@ write_files:
 hostname: ${hostname}
 users:
   - name: ${username}
-    sudo: ['ALL=(ALL) NOPASSWD:ALL']
+    sudo: ['ALL=(ALL) NOPASSWD:ALL'] # pragma: allowlist secret
     groups: wheel
     home: /home/${username}
     shell: /bin/bash
-    lock_passwd: false
+    lock_passwd: false # pragma: allowlist secret
     passwd: ${password}
     ssh_authorized_keys:
       - ${ssh_key}
