--- a/Qemu-Kvm-Terraform/generic-debian-bookworm.cfg
+++ b/Qemu-Kvm-Terraform/generic-debian-bookworm.cfg
@@ -2,11 +2,11 @@
 hostname: ${hostname}
 users:
   - name: ${username}
-    sudo: ALL=(ALL) NOPASSWD:ALL
+    sudo: ALL=(ALL) NOPASSWD:ALL # pragma: allowlist secret
     groups: users, admin
     home: /home/${username}
     shell: /bin/bash
-    lock_passwd: false
+    lock_passwd: false # pragma: allowlist secret
     passwd: ${password}
     ssh_authorized_keys:
       - ${ssh_key}
